--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         body {
             font-family: "Josefin Sans", sans-serif;
             background-color: #fafafa;
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <style type="text/tailwindcss">
+        @theme {
+       --primary-color:#5596FF;
+       --secondary-color:#AC2DEB;
+       --color:#FFFFFF;
         }
         
         /* Style personnalisé pour les checkbox */
@@ -182,6 +188,5 @@
         </div>
 
     </div>
-
 </body>
 </html>
