--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
             background-position: center 43%; 
             background-repeat: no-repeat;
         }
+        @media screen and (width >=1024px) {
+            .banner{
+                height:46vh;
+            }
+        }
     </style>
 </head>
 <body class="min-h-screen bg-gray-100">
@@ -92,11 +97,11 @@
     <div class="banner"></div>
 
     <!-- main -->
-    <div class="container mx-auto px-8 max-w-xl -mt-[12.5rem]">
+    <div class="container mx-auto px-8 max-w-xl -mt-[12.5rem] ">
         <!-- Header -->
-        <div class="flex justify-between items-center mb-10">
-            <h1 class="text-4xl font-bold text-white ">T O D O</h1>
-            <button class="text-white">
+        <div class="flex justify-between items-center mb-10 lg:mb-6">
+            <h1 class="text-4xl font-bold text-white">T O D O</h1>
+            <button class="text-white md:text-red">
                 <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26">
                     <path fill="#FFF" fill-rule="evenodd" d="M13 0c.81 0 1.603.074 2.373.216C10.593 1.199 7 5.43 7 10.5 7 16.299 11.701 21 17.5 21c2.996 0 5.7-1.255 7.613-3.268C23.22 22.572 18.51 26 13 26 5.82 26 0 20.18 0 13S5.82 0 13 0z"/>
                 </svg>
@@ -104,15 +109,15 @@
         </div>
 
         <!-- Input pour nouveau todo -->
-        <div class="bg-white rounded-md shadow-md mb-6">
-            <div class="p-4 border-b flex items-center">
+        <div class="bg-white rounded-md shadow-md mb-6 ">
+            <div class="p-4 border-b flex items-center lg:p-">
                 <div class="input-circle"></div>
                 <input type="text" placeholder="Create a new todo..." class="w-full outline-none text-gray-700 placeholder-gray-400">
             </div>
         </div>
 
         <!-- Liste des tâches -->
-        <div class="bg-white rounded-md shadow-md">
+        <div class="bg-white rounded-md shadow-md ">
             <div class="p-4 border-b flex items-center group">
                 <input type="checkbox" checked class="mr-3">
                 <span class="flex-1 line-through text-gray-400">Complete online JavaScript course</span>
@@ -176,6 +181,11 @@
             <!-- Footer mobile -->
             <div class="p-4 flex justify-between items-center text-sm text-gray-500">
                 <span>5 items left</span>
+                <div class="flex gap-6 hidden lg:block">
+                    <button class="font-bold text-blue-500 ">All</button>
+                    <button class="text-gray-500 hover:text-gray-700 ">Active</button>
+                    <button class="text-gray-500 hover:text-gray-700 ">Completed</button>
+                </div>
                 <button class="hover:text-gray-700">Clear Completed</button>
             </div>
         </div>
