--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             <!-- Footer mobile -->
             <div class="p-4 flex justify-between items-center text-sm text-gray-500">
-                <span>5 items left</span>
+                <span id="itemLeft">0 items left</span>
                 <div class="flex gap-6 hidden lg:block">
                     <button class="font-bold text-blue-500 ">All</button>
                     <button class="text-gray-500 hover:text-gray-700 ">Active</button>
