--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 </svg>
             </button>
         </div>
+     <!-- header end -->
 
         <!-- Input pour nouveau todo -->
         <div class="bg-white rounded-md shadow-md mb-6 ">
@@ -117,8 +118,8 @@
             <!-- Liste -->
             <ul id="todoList"></ul>
             <li id ="todotextbox"  class="p-4 border-b hidden items-center group ">
-                <input class="todo-checkbox" type="checkbox" checked class="mr-3">
-                <span id="todotext"  class="flex-1  text-gray-400">Complete online JavaScript course</span>
+                <input class="todo-checkbox" type="checkbox" >
+                <span id="todotext"  class="flex-1  text-gray-400 ml-[10px]">Complete online JavaScript course</span>
                 <button class="delete-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
@@ -148,7 +149,6 @@
             <button id="clearCompleted" class="text-gray-500 hover:text-gray-700">Completed</button>
         </div>
 
-         <button id="clearCompleted">Clear Completed</button>
 
     </div>
 
