--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <!-- Input pour nouveau todo -->
         <div class="bg-white rounded-md shadow-md mb-6 ">
             <div id="box" class="p-4 border-b flex items-center">
-                <div class="input-circle"></div>
+                <div class="input-circle" id="input-circle"></div>
                 <input id="todoInput" type="text" placeholder="Create a new todo..." class="w-full outline-none text-gray-700 placeholder-gray-400">
             </div>
         </div>
