--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
       <div
         class="bg-white rounded-md shadow-md mt-4 p-4 flex justify-center space-x-4 sm:hidden"
       >
-        <button id="filterAll" class="font-bold text-blue-500">All</button>
-        <button id="filterActive" class="text-gray-500 hover:text-gray-700">Active</button>
-        <button id="filterCompleted" class="text-gray-500 hover:text-gray-700">Completed</button>
+        <button id="filtreAll" class="font-bold text-blue-500">All</button>
+        <button id="filtreActive" class="text-gray-500 hover:text-gray-700">Active</button>
+        <button id="filtreCompleted" class="text-gray-500 hover:text-gray-700">Completed</button>
       </div>
     </div>
     <script src="./dom.js"></script>
