--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             min-height: 250px;
             width: 100%;
             background-image: linear-gradient(to right, rgba(172, 45, 235, 0.7), rgba(85, 150, 255, 0.7)), 
-                              url('x');
+                              url('./assets/IMG/nature.png');
             background-size: 370% auto;
             background-position: center 43%; 
             background-repeat: no-repeat;
@@ -128,8 +128,7 @@
 
     <!-- Bannière -->
     <div class="banner" > 
-    <img src="./assets/IMG/Bitmap (2).svg" alt="" class="w-full" id="imgdarkmode"> 
-    <img src="./assets/IMG/nature.png" alt="">
+   
     </div>
 
     <!-- main -->
